test: fix flaky tests by increasing timeouts and improving test isolation
- increase async verification timeout for eventRepository updates
- increase scheduler timing buffer from 50ms to 200ms
- increase Consul mTLS timeout from 5s to 10s
- reset WireMock requests between parameterized tests